--- a/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpunet_defconfig
+++ b/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpunet_defconfig
@@ -14,8 +14,8 @@ CONFIG_HW_STACK_PROTECTION=y
 CONFIG_GPIO=y
 
 # Enable uart driver
-CONFIG_SERIAL=y
+#CONFIG_SERIAL=y
 
 # enable console
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
+#CONFIG_CONSOLE=y
+#CONFIG_UART_CONSOLE=y
