MAG investigation cleanup

--- a/kx134.conf
+++ b/kx134.conf
@@ -8,7 +8,7 @@ CONFIG_KX134=y
 CONFIG_KX134_LOG_LEVEL_INF=y
 # CONFIG_KX134_LOG_LEVEL_DBG is not set
 CONFIG_KX134_SPI=y
-# CONFIG_KX134_LOW_POWER_MODE
+# CONFIG_KX134_LOW_POWER_MODE is not set
 CONFIG_KX134_HIGH_PERF_MODE=y
 # CONFIG_KX134_AVC_NONE is not set
 # CONFIG_KX134_AVC_2SAMPLES is not set
@@ -18,7 +18,7 @@ CONFIG_KX134_AVC_16SAMPLES=y
 # CONFIG_KX134_AVC_32SAMPLES is not set
 # CONFIG_KX134_AVC_64SAMPLES is not set
 # CONFIG_KX134_AVC_128SAMPLES is not set
-# CONFIG_KX134_RANGE_8G
+# CONFIG_KX134_RANGE_8G is not set
 # CONFIG_KX134_RANGE_16G is not set
 # CONFIG_KX134_RANGE_32G is not set
 CONFIG_KX134_RANGE_64G=y
