Moved files back based on Zephyr example

--- a/prj.conf
+++ b/prj.conf
@@ -1,20 +1,28 @@
-# DataDisc project config
+# Enable mcumgr.
+CONFIG_MCUMGR=y
+
+# Enable most core commands.
+CONFIG_MCUMGR_CMD_IMG_MGMT=y
+CONFIG_MCUMGR_CMD_OS_MGMT=y
+
+# Ensure an MCUboot-compatible binary is generated.
+CONFIG_BOOTLOADER_MCUBOOT=y
+
+# enable console
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
+
+# logging
+CONFIG_LOG=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_DEFAULT_LEVEL=3
+CONFIG_EXTRA_EXCEPTION_INFO=y
 
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
-
-# Config logger
-CONFIG_LOG=y
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_LOG_BACKEND_RTT=y
-CONFIG_LOG_BACKEND_UART=n
-
-#CONFIG_ASSERT=y
-
-#CONFIG_EXTRA_EXCEPTION_INFO=y
-
-CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Bluetooth
 CONFIG_BT=y
@@ -25,26 +33,19 @@ CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
-#CONFIG_BT_NUS=y
 
-# Enable bonding
-#CONFIG_BT_SETTINGS=y
-#CONFIG_FLASH=y
-#CONFIG_FLASH_PAGE_LAYOUT=y
-#CONFIG_FLASH_MAP=y
-#CONFIG_NVS=y
-#CONFIG_SETTINGS=y
+# Allow for large Bluetooth data packets.
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
+
+# Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
+CONFIG_MCUMGR_SMP_BT=y
+CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+
+# Some command handlers require a large stack.
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 # File System
-CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
-CONFIG_FILE_SYSTEM=y
-CONFIG_FAT_FILESYSTEM_ELM=y
-CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
-
-CONFIG_DISK_DRIVER_FLASH=y
-CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
-CONFIG_DISK_VOLUME_SIZE=0x4000000
-
 # Optionally force the file system to be recreated
 #CONFIG_APP_WIPE_STORAGE=y
 
@@ -52,26 +53,60 @@ CONFIG_DISK_VOLUME_SIZE=0x4000000
 CONFIG_MAIN_STACK_SIZE=2048
 
 # Let __ASSERT do its job
-#CONFIG_DEBUG=y
+CONFIG_DEBUG=y
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+
+# Nordic specific external flash stuff
+#CONFIG_PM_EXTERNAL_FLASH=y
+#CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
+CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
+#CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
+
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+#CONFIG_FS_FATFS_EXFAT=y
+
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 # USB related configs
 CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="DataDisc"
+CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
+#CONFIG_USB_CDC_ACM=y
+
+CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
+
+CONFIG_DISK_DRIVER_FLASH=y
+CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
+#CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
+CONFIG_DISK_VOLUME_SIZE=0x00400000
+
 
 # Shell
-#CONFIG_PRINTK=y
+CONFIG_PRINTK=y
 #CONFIG_SHELL=y
+#CONFIG_SHELL_MINIMAL=y
 #CONFIG_SHELL_STACK_SIZE=1024
-#CONFIG_SHELL_BACKEND_SERIAL=n
+#CONFIG_SHELL_BACKEND_SERIAL=y
+
 #CONFIG_THREAD_MONITOR=y
 #CONFIG_INIT_STACKS=y
 #CONFIG_BOOT_BANNER=n
 #CONFIG_THREAD_NAME=y
-#CONFIG_REBOOT=y
+#CONFIG_LOG=n
+#CONFIG_CBPRINTF_NANO=y
+
 #CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
 #CONFIG_UART_LINE_CTRL=y
 #CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+
+CONFIG_REBOOT=y
 
 # Drivers
 CONFIG_SENSOR=y
