--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -11,9 +11,9 @@
 		zephyr,shell-uart = &uart0;
 		zephyr,uart-mcumgr = &uart0;
 		zephyr,bt-uart = &uart0;
-		// zephyr,bt-mon-uart = &uart0;
-		// zephyr,bt-c2h-uart = &uart0;
-		// zephyr,bt-hci-rpmsg-ipc = &ipc0;
+		zephyr,bt-mon-uart = &uart0;
+		zephyr,bt-c2h-uart = &uart0;
+		//zephyr,bt-hci-rpmsg-ipc = &ipc0;
 		nordic,pm-ext-flash = &mx25u32;
 	};
 	
