mcuboot now gets placed into flash correctly

--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,6 @@
 # Enable mcumgr.
 CONFIG_MCUMGR=y
+CONFIG_PM_EXTERNAL_FLASH_MCUBOOT_SECONDARY=n
 
 # Enable most core commands.
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
