--- a/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpunet-pinctrl.dtsi
+++ b/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpunet-pinctrl.dtsi
@@ -4,26 +4,26 @@
  */
 
 &pinctrl {
-	uart0_default: uart0_default {
-		group1 {
-			psels = <NRF_PSEL(UART_TX, 0, 24)>,
-				<NRF_PSEL(UART_RTS, 0, 23)>;
-		};
-		group2 {
-			psels = <NRF_PSEL(UART_RX, 0, 30)>,
-				<NRF_PSEL(UART_CTS, 0, 29)>;
-			bias-pull-up;
-		};
-	};
+	// uart0_default: uart0_default {
+	// 	group1 {
+	// 		psels = <NRF_PSEL(UART_TX, 0, 24)>,
+	// 			<NRF_PSEL(UART_RTS, 0, 23)>;
+	// 	};
+	// 	group2 {
+	// 		psels = <NRF_PSEL(UART_RX, 0, 30)>,
+	// 			<NRF_PSEL(UART_CTS, 0, 29)>;
+	// 		bias-pull-up;
+	// 	};
+	// };
 
-	uart0_sleep: uart0_sleep {
-		group1 {
-			psels = <NRF_PSEL(UART_TX, 0, 24)>,
-				<NRF_PSEL(UART_RX, 0, 30)>,
-				<NRF_PSEL(UART_RTS, 0, 23)>,
-				<NRF_PSEL(UART_CTS, 0, 29)>;
-			low-power-enable;
-		};
-	};
+	// uart0_sleep: uart0_sleep {
+	// 	group1 {
+	// 		psels = <NRF_PSEL(UART_TX, 0, 24)>,
+	// 			<NRF_PSEL(UART_RX, 0, 30)>,
+	// 			<NRF_PSEL(UART_RTS, 0, 23)>,
+	// 			<NRF_PSEL(UART_CTS, 0, 29)>;
+	// 		low-power-enable;
+	// 	};
+	// };
 
 };
