--- a/prj.conf
+++ b/prj.conf
@@ -1,6 +1,5 @@
 # Enable mcumgr.
 CONFIG_MCUMGR=y
-CONFIG_PM_EXTERNAL_FLASH_MCUBOOT_SECONDARY=n
 
 # Enable most core commands.
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
@@ -8,6 +7,7 @@ CONFIG_MCUMGR_CMD_OS_MGMT=y
 
 # Ensure an MCUboot-compatible binary is generated.
 CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_PM_EXTERNAL_FLASH_MCUBOOT_SECONDARY=n
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
@@ -34,6 +34,7 @@ CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
+CONFIG_BT_DEBUG_LOG=n
 
 # Allow for large Bluetooth data packets.
 CONFIG_BT_L2CAP_TX_MTU=252
@@ -120,3 +121,12 @@ CONFIG_PWM=y
 CONFIG_ADC=y
 
 CONFIG_NEWLIB_LIBC=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=2048
+
+# Enable bonding
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_BT_SETTINGS=n
+
+CONFIG_ASSERT=y
