--- a/prj.conf
+++ b/prj.conf
@@ -7,12 +7,12 @@ CONFIG_MCUMGR_CMD_OS_MGMT=y
 
 # Ensure an MCUboot-compatible binary is generated.
 CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_PM_EXTERNAL_FLASH_MCUBOOT_SECONDARY=n
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_UART_CONSOLE=n
-CONFIG_CONSOLE=y
 
 # logging
 CONFIG_LOG=y
@@ -24,10 +24,10 @@ CONFIG_EXTRA_EXCEPTION_INFO=y
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
-CONFIG_SERIAL=y
 
 # Bluetooth
 CONFIG_BT=y
+CONFIG_BT_SMP=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
 CONFIG_BT_DEVICE_APPEARANCE=1345
@@ -44,7 +44,7 @@ CONFIG_MCUMGR_SMP_BT=y
 CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 
 # Some command handlers require a large stack.
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4092
 
 # File System
 # Optionally force the file system to be recreated
@@ -112,7 +112,6 @@ CONFIG_REBOOT=y
 # Drivers
 CONFIG_SENSOR=y
 
-CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 
 CONFIG_SPI=y
@@ -121,3 +120,10 @@ CONFIG_PWM=y
 CONFIG_ADC=y
 
 CONFIG_NEWLIB_LIBC=y
+
+# Enable bonding
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_BT_SETTINGS=n
+
+CONFIG_ASSERT=y
