--- a/kx134.conf
+++ b/kx134.conf
@@ -31,11 +31,11 @@ CONFIG_KX134_RANGE_64G=y
 # CONFIG_KX134_OSA_12HZ5 is not set
 # CONFIG_KX134_OSA_25HZ is not set
 # CONFIG_KX134_OSA_50HZ is not set
-# CONFIG_KX134_OSA_100HZ is not set
+# CONFIG_KX134_OSA_100HZ=y
 # CONFIG_KX134_OSA_200HZ is not set
 # CONFIG_KX134_OSA_400HZ is not set
-# CONFIG_KX134_OSA_800HZ is not set
-CONFIG_KX134_OSA_1600HZ=y
+CONFIG_KX134_OSA_800HZ=y
+# CONFIG_KX134_OSA_1600HZ=y
 # CONFIG_KX134_OSA_3200HZ is not set
 # CONFIG_KX134_OSA_6400HZ is not set
 # CONFIG_KX134_OSA_12800HZ is not set
