Optimizing for performance

--- a/prj.conf
+++ b/prj.conf
@@ -21,6 +21,10 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_EXTRA_EXCEPTION_INFO=y
 
+CONFIG_CPU_LOAD=y
+CONFIG_CPU_LOAD_LOG_LEVEL_INF=y
+CONFIG_CPU_LOAD_LOG_PERIODIC=y
+
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
