--- a/kx134.conf
+++ b/kx134.conf
@@ -33,9 +33,9 @@ CONFIG_KX134_RANGE_64G=y
 # CONFIG_KX134_OSA_50HZ is not set
 # CONFIG_KX134_OSA_100HZ=y
 # CONFIG_KX134_OSA_200HZ is not set
-# CONFIG_KX134_OSA_400HZ is not set
+CONFIG_KX134_OSA_400HZ=y
 # CONFIG_KX134_OSA_800HZ=y
-CONFIG_KX134_OSA_1600HZ=y
+# CONFIG_KX134_OSA_1600HZ=y
 # CONFIG_KX134_OSA_3200HZ is not set
 # CONFIG_KX134_OSA_6400HZ is not set
 # CONFIG_KX134_OSA_12800HZ is not set
