Sending data over BLE now works

--- a/prj.conf
+++ b/prj.conf
@@ -28,6 +28,7 @@ CONFIG_CPU_LOAD_LOG_PERIODIC=y
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
+CONFIG_SERIAL=y
 
 # Bluetooth
 CONFIG_BT=y
@@ -38,6 +39,9 @@ CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
+
+# Enable the NUS service
+CONFIG_BT_NUS=y
 
 # Allow for large Bluetooth data packets.
 CONFIG_BT_L2CAP_TX_MTU=252
